# crud-example-grpc-mysql

./: .env  Cargo.toml  Documentacion.md  Makefile  README.md  build.rs  docker-compose.yaml
.github/workflows/: rust.yml
migrations/: 20230417143142_init.up.sql
proto/: users.proto
src/: client.rs  errors.rs  example-async-runtime.rs  handler_server.rs  lib.rs  main.rs  multi-clients.rs  server.rs
src/data/: context.rs  handler.rs  mod.rs  model.rs  scheme.rs
