[package]
name = "kinsper-rust-test"
version = "1.0.0"
edition = "2021"
authors = ["Federico Jose Pacheco <fpacheco@fi.uba.ar>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid", "migrate"] }
tokio = { version = "1.27.0", features = ["full"] }
