[package]
name = "kinsper-rust-test"
version = "1.0.0"
edition = "2021"
authors = ["Federico Jose Pacheco <fpacheco@fi.uba.ar>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
log = "0.4"
env_logger = "0.10.0"
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid", "migrate"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
tonic = "0.8"
tonic-reflection = "0.6.0"
prost = "0.11"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"